# enum-actions

./: README.md  pyproject.toml
enum_actions/: __init__.py
tests/: test_enum_actions.py
